Chore : Security Object-path 문제 해결 버전 변경. 0.6.0 => 0.11.8

--- a/front/package.json
+++ b/front/package.json
@@ -76,7 +76,8 @@
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "vite": "^4.2.0",
-    "vite-tsconfig-paths": "^4.0.7"
+    "vite-tsconfig-paths": "^4.0.7",
+    "object-path": ">=0.11.8"
   },
   "packageManager": "yarn@1.22.19",
   "msw": {
